fixed social icons alignment issued by adjusting padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@ footer{
 .social-links li a i{
     width: 32px;
     height: 32px;
-    padding: 12px;
+    padding: 12px 0;
     border-radius: 50%; /* setting border-radius to 50% on a square item give you a circle*/
     line-height: 7px;
     text-align: center;
